# RISC-V-ECTOR-

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
gui/: CMakeLists.txt  cachewaysselector.cc  cachewaysselector.h  digitlabel.cc  digitlabel.h  digitlabeldelegate.cc  digitlabeldelegate.h  digitlabelhelper.h  dynamicwaysentry.cc  dynamicwaysentry.h  gui.cc  gui.h  gui.ui  main.cc  messages.h  registerview.cc  registerview.h  resources.qrc  storageview.cc  storageview.h  util.cc  util.h  worker.cc  worker.h
gui/resources/: styles.qss
inc/: accessor.h  cache.h  cli.h  component.h  controller.h  definitions.h  dram.h  dum.h  ex.h  fact.h  id.h  if.h  instr.h  instrDTO.h  logger.h  mm.h  operation.h  pipe_spec.h  response.h  risc_vector.h  stage.h  storage.h  utils.h  vec.h  wb.h
src/: controller.cc  ex.cc  id.cc  if.cc  instr.cc  instrDTO.cc  logger.cc  main.cc  mm.cc  response.cc  rv.cc  stage.cc  vec.cc  wb.cc
src/cli/: cli.cc
src/fact/: fact.cc
src/gui/: GUI.cc  GUI.h  GUI.ui  gui.cc  resources.qrc
src/logger/: logger.cc
src/repl/: repl.py
src/sim/: controller.cc  dum.cc  ex.cc  id.cc  if.cc  instr.cc  instrDTO.cc  mm.cc  stage.cc  wb.cc
src/storage/: cache.cc  dram.cc  storage.cc
src/utils/: accessor.cc  component.cc  response.cc  utils.cc
tests/: cache.cc  controller.cc  dram.cc  dum.h  ex.cc  id.cc  if.cc  logger.cc  tests.cc  utils.cc
